@@ -5,9 +5,11 @@ require 'puppetdb/connection'
 
 describe 'query_facts' do
   it do
-    PuppetDB::Connection.any_instance.stubs(:query).returns [
-      { 'certname' => 'apache4.puppetexplorer.io', 'environment' => 'production', 'name' => 'ipaddress', 'value' => '172.31.6.80' }
-    ]
+    PuppetDB::Connection.any_instance.expects(:query)
+      .with(:facts, ['or', ['=', 'name', 'ipaddress']], {:extract => [:certname, :name, :value]})
+      .returns [
+        { 'certname' => 'apache4.puppetexplorer.io', 'environment' => 'production', 'name' => 'ipaddress', 'value' => '172.31.6.80' }
+      ]
     should run.with_params('', ['ipaddress']).and_return('apache4.puppetexplorer.io' => { 'ipaddress' => '172.31.6.80' })
   end
 end
